--- a/public/stylesheets/haypista.css
+++ b/public/stylesheets/haypista.css
@@ -390,7 +390,7 @@ ul.list li .item .avatar {
 .right { float: right; }
 
 div.rpx { 
-	width: 745px; 
+/*	width: 745px; */
 	height: 240px; 
 }
 
